<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="#FFFFFF">

        <Button
            android:id="@+id/backFromSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/back" />

        <EditText
            android:id="@+id/searchField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/searchTerms" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/searchField"
            android:layout_toRightOf="@+id/usernameCheck"
            android:ems="10"
            android:hint="@string/author" />

        <EditText
            android:id="@+id/hashField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/username"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/username"
            android:ems="10"
            android:hint="@string/hashtag" >

        </EditText>

        <CheckBox
            android:id="@+id/usernameCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/username"
            android:layout_alignParentLeft="true"
            android:text="@string/at" />

        <CheckBox
            android:id="@+id/hashCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/hashField"
            android:layout_alignParentLeft="true"
            android:text="@string/hash" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hashField"
            android:layout_centerHorizontal="true"
            android:text="@string/search" />

    </RelativeLayout>
