
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="#FFFFFF">

        <EditText
            android:id="@+id/tweetField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/enter"
            android:inputType="textMultiLine"
            android:maxLength="140"
            android:minHeight="100dp" />

        <Button
            android:id="@+id/submitTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tweetField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/submit" />

        <Button
            android:id="@+id/backFromTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:minWidth="100dp"
            android:text="@string/back" />

    </RelativeLayout>
