
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/goToTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:minWidth="200dp"
            android:text="@string/tweet" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:text="@string/choice"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/goToTimeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/goToTweet"
            android:layout_centerHorizontal="true"
            android:minWidth="200dp"
            android:text="@string/timeline" />

        <Button
            android:id="@+id/goToSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/goToTweet"
            android:layout_below="@+id/goToTweet"
            android:minWidth="200dp"
            android:text="Search" />

    </RelativeLayout>
